src/css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
/** {
    border: 1px solid red;
}*/

header {
    background-color: #fb8064;
    box-shadow: 0px 4px 2px -2px black;
}

img {
    margin-left: 60px;
}

.fa {
    background-color: #fb8064;
}

.header {
    margin-left: auto;
    margin-right: auto;
}

 .navbar {
    background-color: #fb8064;
    border: 1px solid #ffffff;
    float: right;
 }

 .navbar:hover {
    background-color: #75d4de;
 }

a {
    color: #ffffff;
}

body {
    background-color: #e1e1e1;
    text-align: center;
}

h4 {
    text-align: center;

}

.body {
    width: 100%;
    display: inline-block;
    margin: 0 auto;
}

.button {
    background-color: #ffffff;
    border-radius: 50%;
    width: 150px;
    height: 150px;
    box-shadow: 0px 4px 2px -2px #888888

}

.button:hover {
    background-color: #75d4de;
}

footer {
    background-color: #58595a;
    position: relative;
}

.app {
    height: auto;
}

h3 {
    text-align: center;
}

.userInfo {
    color: white;
    background-color: black;
}

